// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildFromV1Document test fixtures arrow-binding.tldr 1`] = `
{
  "binding:15": {
    "fromId": "shape:13",
    "id": "binding:15",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.5,
        "y": 0.5,
      },
      "terminal": "start",
    },
    "toId": "shape:11",
    "type": "arrow",
    "typeName": "binding",
  },
  "binding:17": {
    "fromId": "shape:13",
    "id": "binding:17",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.495,
        "y": 0.655,
      },
      "terminal": "end",
    },
    "toId": "shape:9",
    "type": "arrow",
    "typeName": "binding",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:11": {
    "id": "shape:11",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 114.39,
      "labelColor": "red",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 240.17,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1616.09,
    "y": 584.28,
  },
  "shape:13": {
    "id": "shape:13",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": -74.62876127600846,
      "color": "red",
      "dash": "draw",
      "end": {
        "x": 0,
        "y": 173.3,
      },
      "fill": "none",
      "font": "draw",
      "labelColor": "red",
      "labelPosition": 0.5,
      "size": "m",
      "start": {
        "x": 146.32,
        "y": 0,
      },
      "text": "",
    },
    "rotation": 0,
    "type": "arrow",
    "typeName": "shape",
    "x": 1541.56,
    "y": 698.67,
  },
  "shape:9": {
    "id": "shape:9",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 177.03,
      "labelColor": "red",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 136.64,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1388.92,
    "y": 820.52,
  },
}
`;

exports[`buildFromV1Document test fixtures exact-arrow-binding.tldr 1`] = `
{
  "binding:14": {
    "fromId": "shape:12",
    "id": "binding:14",
    "meta": {},
    "props": {
      "isExact": true,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.6250000000000002,
        "y": 0.5700000000000003,
      },
      "terminal": "start",
    },
    "toId": "shape:10",
    "type": "arrow",
    "typeName": "binding",
  },
  "binding:16": {
    "fromId": "shape:12",
    "id": "binding:16",
    "meta": {},
    "props": {
      "isExact": true,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.5,
        "y": 0.5,
      },
      "terminal": "end",
    },
    "toId": "shape:8",
    "type": "arrow",
    "typeName": "binding",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:10": {
    "id": "shape:10",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 114.39,
      "labelColor": "red",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 240.17,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1616.09,
    "y": 584.28,
  },
  "shape:12": {
    "id": "shape:12",
    "index": "a3",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "arrowheadEnd": "arrow",
      "arrowheadStart": "arrow",
      "bend": -117.13359957478735,
      "color": "red",
      "dash": "draw",
      "end": {
        "x": 0,
        "y": 201.67,
      },
      "fill": "none",
      "font": "draw",
      "labelColor": "red",
      "labelPosition": 0.5,
      "size": "m",
      "start": {
        "x": 293.36,
        "y": 0,
      },
      "text": "",
    },
    "rotation": 0,
    "type": "arrow",
    "typeName": "shape",
    "x": 1510.86,
    "y": 661.97,
  },
  "shape:8": {
    "id": "shape:8",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 177.03,
      "labelColor": "red",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 136.64,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1418.93,
    "y": 779.31,
  },
}
`;

exports[`buildFromV1Document test fixtures incorrect-arrow-binding.tldr 1`] = `
{
  "binding:14": {
    "fromId": "shape:12",
    "id": "binding:14",
    "meta": {},
    "props": {
      "isExact": false,
      "isPrecise": true,
      "normalizedAnchor": {
        "x": 0.385,
        "y": 0.425,
      },
      "terminal": "end",
    },
    "toId": "shape:8",
    "type": "arrow",
    "typeName": "binding",
  },
  "document:document": {
    "gridSize": 10,
    "id": "document:document",
    "meta": {},
    "name": "",
    "typeName": "document",
  },
  "page:page": {
    "id": "page:page",
    "index": "a1",
    "meta": {},
    "name": "Page 1",
    "typeName": "page",
  },
  "shape:10": {
    "id": "shape:10",
    "index": "a2",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 114.39,
      "labelColor": "red",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 240.17,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1362.24,
    "y": 784.23,
  },
  "shape:12": {
    "id": "shape:12",
    "index": "a1V",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "arrowheadEnd": "arrow",
      "arrowheadStart": "none",
      "bend": -0.00010621283112062974,
      "color": "red",
      "dash": "draw",
      "end": {
        "x": 0,
        "y": 6.55,
      },
      "fill": "none",
      "font": "draw",
      "labelColor": "red",
      "labelPosition": 0.5,
      "size": "m",
      "start": {
        "x": 252.64,
        "y": 0,
      },
      "text": "",
    },
    "rotation": 0,
    "type": "arrow",
    "typeName": "shape",
    "x": 1544.3,
    "y": 817.34,
  },
  "shape:8": {
    "id": "shape:8",
    "index": "a1",
    "isLocked": false,
    "meta": {},
    "opacity": 1,
    "parentId": "page:page",
    "props": {
      "align": "middle",
      "color": "red",
      "dash": "draw",
      "fill": "solid",
      "font": "draw",
      "geo": "rectangle",
      "growY": 0,
      "h": 177.03,
      "labelColor": "red",
      "size": "m",
      "text": "",
      "url": "",
      "verticalAlign": "middle",
      "w": 136.64,
    },
    "rotation": 0,
    "type": "geo",
    "typeName": "shape",
    "x": 1391.66,
    "y": 769.92,
  },
}
`;
